Correct topbar font sizes, spacing

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 
 * {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Arial, sans-serif;
     font-size: 14px;
 }
 
@@ -19,18 +19,39 @@
     justify-content: space-between;
 }
 
-ul, li {
+
+
+ul {
+    display: flex;
+    /* align-items: center;
+    list-style-type: none;
+    font-size: 14px;
+    padding: 1em; */
+    /* below, corrections to user agent stylesheet */
+    margin-block-start: 0em;
+    margin-block-end: 0em;
+    margin-inline-start: 0px;
+    margin-inline-end: 5px;
+    padding-inline-start: 15px;
+}
+
+li {
     display: flex;
     align-items: center;
     list-style-type: none;
     font-size: 14px;
-    padding: 1em;
+    padding: 0.5em;
     /* below, corrections to user agent stylesheet */
     margin-block-start: 0em;
     margin-block-end: 0em;
     margin-inline-start: 0px;
     margin-inline-end: 0px;
     padding-inline-start: 15px;
+}
+
+#usermenu li {
+    font-size: 13px;
+    color: rgb(70, 70, 70);
 }
 
 .hero {
